# IonWave

./: Cargo.toml  README.md
src/: basis.rs  c2lr.rs  constraints.rs  dynamics.rs  io.rs  lib.rs  lsq.rs  types.rs
src/tests/: lsq_smoke.rs
tests/: axial_and_c2lr.rs  common.rs  grad_check.rs
