# Cargo.toml
[package]
name = "ionwave"
version = "0.1.0"
edition = "2021"

[lib]
name = "ionwave"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
faer = "0.19"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

# for Python bindings
numpy = "0.21"

# optional data layer for very large results
polars = { version = "0.41", features = ["lazy", "parquet"] }
anyhow = "1.0.100"
autodiff = "0.7.0"
sprs = "0.11.3"
